--- a/VaccineC/src/app/pages/empresa/update-company-schedule-dialog.html
+++ b/VaccineC/src/app/pages/empresa/update-company-schedule-dialog.html
@@ -20,29 +20,35 @@
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-6">
                 <mat-label>Horário Inicial</mat-label>
-                <input type="time" matInput formControlName="StartTime" id="StartTime" [(ngModel)]="StartTime"
-                    required="true">
-                <mat-error
-                    *ngIf="CompanyScheduleForm.controls.StartTime.touched && CompanyScheduleForm.controls.StartTime.invalid">
-                    <span *ngIf="CompanyScheduleForm.controls.StartTime.errors?.required">O Horario Inicial é
-                        obrigatório.</span>
+                <input type="time" 
+                       matInput 
+                       formControlName="StartTime" 
+                       id="StartTime" 
+                       [(ngModel)]="StartTime"
+                       required>
+                <mat-error *ngIf="CompanyScheduleForm.controls.StartTime.touched && CompanyScheduleForm.controls.StartTime.invalid">
+                    <span *ngIf="CompanyScheduleForm.controls.StartTime.errors?.required">O Horario Inicial é obrigatório.</span>
                 </mat-error>
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="col-sm-6">
                 <mat-label>Horário Final</mat-label>
-                <input type="time" matInput formControlName="FinalTime" id="FinalTime" [(ngModel)]="FinalTime"
+                <input 
+                    type="time" 
+                    matInput 
+                    formControlName="FinalTime" 
+                    id="FinalTime" 
+                    [(ngModel)]="FinalTime"
                     required="true">
-                <mat-error
-                    *ngIf="CompanyScheduleForm.controls.FinalTime.touched && CompanyScheduleForm.controls.FinalTime.invalid">
-                    <span *ngIf="CompanyScheduleForm.controls.FinalTime.errors?.required">O Horario Final é
-                        obrigatório.</span>
+                <mat-error *ngIf="CompanyScheduleForm.controls.FinalTime.touched && CompanyScheduleForm.controls.FinalTime.invalid">
+                    <span *ngIf="CompanyScheduleForm.controls.FinalTime.errors?.required">O Horario Final é obrigatório.</span>
                 </mat-error>
             </mat-form-field>
         </div>
     </form>
 </mat-dialog-content>
+
 <mat-dialog-actions align="end">
-    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
-    <button class="create-button" mat-flat-button (click)="updateCompanySchedule()" cdkFocusInitial>Salvar</button>
+    <button mat-flat-button mat-dialog-close color="primary" cdkFocusInitial>Cancelar</button>
+    <button class="create-button" mat-flat-button (click)="updateCompanySchedule()">Salvar</button>
 </mat-dialog-actions>
