--- a/VaccineC/src/app/pages/gerenciar-usuarios/reset-password-dialog.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/reset-password-dialog.html
@@ -9,20 +9,33 @@
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-12">
                 <mat-label>Informe a nova Senha</mat-label>
-                <input type="password" matInput formControlName="Password" [maxlength]="255" id="Password"
-                    [(ngModel)]="Password" required>
+                <input type="password" 
+                       matInput 
+                       formControlName="Password" 
+                       [maxlength]="255" 
+                       id="Password"
+                       [(ngModel)]="Password" 
+                       required>
             </mat-form-field>
         </div>
+
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-12">
                 <mat-label>Confirme a nova Senha</mat-label>
-                <input type="password" matInput formControlName="ConfirmPassword" [maxlength]="255" id="ConfirmPassword"
-                    [(ngModel)]="ConfirmPassword" required>            
+                <input type="password" 
+                       matInput 
+                       formControlName="ConfirmPassword" 
+                       [maxlength]="255" 
+                       id="ConfirmPassword"
+                       [(ngModel)]="ConfirmPassword" 
+                       required>            
             </mat-form-field>
         </div>
+
     </form>
 </mat-dialog-content>
+
 <mat-dialog-actions align="end">
-    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
-    <button mat-flat-button cdkFocusInitial (click)="resetPassword()" class="create-button">Alterar</button>
+    <button mat-flat-button mat-dialog-close color="primary" cdkFocusInitial>Cancelar</button>
+    <button mat-flat-button (click)="resetPassword()" class="create-button">Alterar</button>
 </mat-dialog-actions>
