--- a/VaccineC/src/app/pages/home/home.component.html
+++ b/VaccineC/src/app/pages/home/home.component.html
@@ -3,9 +3,7 @@
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
         <section id="center" class="section-main">
-            <div id="is-content" class="flex-1 is-content is-content-grow">
-               
-            </div>
+            <div id="is-content" class="flex-1 is-content is-content-grow"></div>
         </section>
     </div>
 </div>
