--- a/VaccineC/src/app/pages/snackbar/snack-bar.component.html
+++ b/VaccineC/src/app/pages/snackbar/snack-bar.component.html
@@ -3,8 +3,7 @@
 		<span class="example-snack-bar-message">
 			{{ data.message }}
 		</span>
-		<button id="action-button" (click)="dismissWithAction()" mat-button
-			>{{data.action}}</button>
+		<button id="action-button" (click)="dismissWithAction()" mat-button>{{data.action}}</button>
 	</div>
 
 	<mat-progress-bar id="progress-bar" mode="determinate" [value]="progress">
