--- a/VaccineC/src/app/pages/empresa/confirm-company-remove-dialog.html
+++ b/VaccineC/src/app/pages/empresa/confirm-company-remove-dialog.html
@@ -4,9 +4,14 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-flat-button
-            mat-dialog-close color="primary">Cancelar</button>
+            mat-dialog-close 
+            color="primary"
+            cdkFocusInitial>
+            Cancelar
+    </button>
     <button mat-flat-button
             color="warn"
-            [mat-dialog-close]="true"
-            cdkFocusInitial>Excluir</button>
+            [mat-dialog-close]="true">
+            Excluir
+    </button>
 </mat-dialog-actions>
