--- a/VaccineC/src/app/pages/empresa/dialog-content-schedule-dialog.html
+++ b/VaccineC/src/app/pages/empresa/dialog-content-schedule-dialog.html
@@ -1,10 +1,17 @@
 <h2 mat-dialog-title>Horários</h2>
 <mat-dialog-content class="mat-typography">
     <form [formGroup]="CompanyScheduleForm">
-        <div class="div-row-input" style="padding-right: 0.75rem;padding-left: 0.75rem;padding-bottom: 1.34375em;">
+        <div class="div-row-input" 
+             style="padding-right: 0.75rem;padding-left: 0.75rem;padding-bottom: 1.34375em;">
+            
             <select class="form-select"
-            formControlName="Day" id="Day"
-            [(ngModel)]="Day"  multiple aria-label="multiple select example" size="7">
+                    formControlName="Day" 
+                    id="Day"
+                    [(ngModel)]="Day"  
+                    multiple 
+                    aria-label="multiple select example" 
+                    size="7">
+
                 <option selected value="SEG">Segunda</option>
                 <option value="TER">Terça</option>
                 <option value="QUA">Quarta</option>
@@ -12,13 +19,18 @@
                 <option value="SEX">Sexta</option>
                 <option value="SAB">Sábado</option>
                 <option value="DOM">Domingo</option>
-              </select>
+            </select>
         </div>
 
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-6">
                 <mat-label>Horário Inicial</mat-label>
-                <input type="time" matInput formControlName="StartTime" id="StartTime" [(ngModel)]="StartTime" required="true">
+                <input type="time" 
+                       matInput 
+                       formControlName="StartTime" 
+                       id="StartTime" 
+                       [(ngModel)]="StartTime" 
+                       required>
                 <mat-error *ngIf="CompanyScheduleForm.controls.StartTime.touched && CompanyScheduleForm.controls.StartTime.invalid">
                     <span *ngIf="CompanyScheduleForm.controls.StartTime.errors?.required">O Horario Inicial é obrigatório.</span>
                 </mat-error>
@@ -26,7 +38,12 @@
 
             <mat-form-field appearance="fill" class="col-sm-6">
                 <mat-label>Horário Final</mat-label>
-                <input type="time" matInput formControlName="FinalTime" id="FinalTime" [(ngModel)]="FinalTime" required="true">
+                <input type="time" 
+                       matInput 
+                       formControlName="FinalTime" 
+                       id="FinalTime" 
+                       [(ngModel)]="FinalTime" 
+                       required>
                 <mat-error *ngIf="CompanyScheduleForm.controls.FinalTime.touched && CompanyScheduleForm.controls.FinalTime.invalid">
                     <span *ngIf="CompanyScheduleForm.controls.FinalTime.errors?.required">O Horario Final é obrigatório.</span>
                 </mat-error>
@@ -34,7 +51,8 @@
         </div>
     </form>
 </mat-dialog-content>
+
 <mat-dialog-actions align="end">
-    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
-    <button mat-flat-button class="create-button" (click)="saveCompanySchedule()" cdkFocusInitial>Salvar</button>
+    <button mat-flat-button mat-dialog-close color="primary" cdkFocusInitial>Cancelar</button>
+    <button mat-flat-button class="create-button" (click)="saveCompanySchedule()">Salvar</button>
 </mat-dialog-actions>
