--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.html
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.html
@@ -3,23 +3,29 @@
   <div id="content-wrapper" class="d-flex flex-column">
     <app-toolbar></app-toolbar>
     <app-container containerTitle="Formas Pagamento" containerPath="Cadastros" [information]="informationField">
-
       <mat-tab-group #tabGroup animationDuration="0ms">
 
         <!-- TAB PESQUISA -->
         <mat-tab label="Pesquisa">
           <div class="search-group">
+            
             <div class="col-sm-11 p-0 d-flex">
               <mat-form-field class="search-form-field col-sm-9" appearance="outline">
                 <mat-label>Digite a forma de pagamento</mat-label>
-                <input matInput type="text" [(ngModel)]="searchNamePaymentForm" id="searchNamePaymentForm">
+                <input matInput 
+                       type="text" 
+                       [(ngModel)]="searchNamePaymentForm" 
+                       id="searchNamePaymentForm">
                 <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
                   <mat-icon>close</mat-icon>
                 </button>
               </mat-form-field>
 
-              <button (click)="loadPaymentFormData()" id="mat-search-button" mat-raised-button color="primary"
-                class="mat-button-entry me-2" [disabled]="searchButtonLoading">
+              <button (click)="loadPaymentFormData()" 
+                      id="mat-search-button" 
+                      mat-raised-button color="primary"
+                      class="mat-button-entry me-2" 
+                      [disabled]="searchButtonLoading">
                 <div class="spinner">
                   <mat-spinner *ngIf="searchButtonLoading" [diameter]="15"></mat-spinner>
                   <span *ngIf="!searchButtonLoading" class="fa-solid fa-magnifying-glass me-1 w-20px"></span>
@@ -27,18 +33,21 @@
                 </div>
               </button>
 
-              <button id="mat-add-button" (click)="tabGroup.selectedIndex=1" (click)="addNewPaymentForm()"
-                mat-raised-button class="mat-button-entry create-button" matTooltip="Nova Forma Pagamento"
-                matTooltipPosition="above">
-                <span class="fa-solid fa-plus w-20px"></span>
+              <button id="mat-add-button" 
+                      (click)="tabGroup.selectedIndex=1" 
+                      (click)="addNewPaymentForm()"
+                      mat-raised-button 
+                      class="mat-button-entry create-button" 
+                      matTooltip="Nova Forma Pagamento"
+                      matTooltipPosition="above">
+                      <span class="fa-solid fa-plus w-20px"></span>
               </button>
             </div>
           </div>
 
           <div id="search-table">
             <div class="col-sm-11 search-table-content mat-elevation-z2">
-              <table class="col-sm-12" mat-table [dataSource]="dataSource" matSort matSortActive="Name"
-                matSortDirection="asc">
+              <table class="col-sm-12" mat-table [dataSource]="dataSource" matSort matSortActive="Name" matSortDirection="asc">
 
                 <!-- Name Column -->
                 <ng-container matColumnDef="Name">
@@ -61,9 +70,12 @@
                 <ng-container matColumnDef="Options">
                   <th mat-header-cell *matHeaderCellDef> </th>
                   <td mat-cell *matCellDef="let row">
-                    <button mat-icon-button color="primary" title="Visualizar"><i class="fa-solid fa-pen-to-square"
-                        (click)="tabGroup.selectedIndex=1" (click)="editPaymentForm(row.ID)"></i></button>
-
+                    <button mat-icon-button color="primary" title="Visualizar">
+                      <i class="fa-solid fa-pen-to-square" 
+                         (click)="tabGroup.selectedIndex=1" 
+                         (click)="editPaymentForm(row.ID)">
+                      </i>
+                    </button>
                   </td>
                 </ng-container>
 
@@ -75,7 +87,6 @@
                   <td class="mat-cell" colspan="2">Nenhum registro encontrado.</td>
                 </tr>
               </table>
-
               <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
             </div>
           </div>
@@ -88,21 +99,28 @@
               <div class="offset-sm-1 col-sm-11 p-0">
 
                 <mat-form-field [hidden]="true">
-                  <input matInput #NameIdPaymentForm formControlName="IdPaymentForm" id="IdPaymentForm"
-                    [(ngModel)]="IdPaymentForm">
+                  <input matInput 
+                         #NameIdPaymentForm 
+                         formControlName="IdPaymentForm" 
+                         id="IdPaymentForm"
+                         [(ngModel)]="IdPaymentForm">
                 </mat-form-field>
 
                 <div class="div-row-input">
                   <mat-form-field appearance="fill" class="col-sm-11">
                     <mat-label>Forma de Pagamento</mat-label>
-                    <input matInput #NameInput formControlName="Name" maxlength="255"
-                      placeholder="Ex. Cartão de Crédito" id="name" [(ngModel)]="Name" required>
+                    <input matInput 
+                           #NameInput 
+                           formControlName="Name" 
+                           maxlength="255"
+                           placeholder="Ex. Cartão de Crédito" 
+                           id="name" 
+                           [(ngModel)]="Name" 
+                           required>
                     <mat-hint align="end">{{NameInput.value?.length || 0}}/255</mat-hint>
                     <mat-error *ngIf="paymentFormForm.controls.Name.touched && paymentFormForm.controls.Name.invalid">
-                      <span *ngIf="paymentFormForm.controls.Name.errors?.required">A Forma de Pagamento é
-                        obrigatória.</span>
-                      <span *ngIf="paymentFormForm.controls.Name.errors?.maxlength">A Forma de Pagamento deve ter menos
-                        de 255 caracteres.</span>
+                      <span *ngIf="paymentFormForm.controls.Name.errors?.required">A Forma de Pagamento é obrigatória.</span>
+                      <span *ngIf="paymentFormForm.controls.Name.errors?.maxlength">A Forma de Pagamento deve ter menos de 255 caracteres.</span>
                     </mat-error>
                   </mat-form-field>
                 </div>
@@ -110,19 +128,26 @@
                 <div class="div-row-input">
                   <mat-form-field appearance="fill" class="col-sm-6">
                     <mat-label>Máximo de parcelas</mat-label>
-                    <input type="number" matInput #MaximumInstallmentsInput formControlName="MaximumInstallments"
-                      maxlength="10" id="maximumInstallments" [(ngModel)]="MaximumInstallments" required>
-                    <mat-error
-                      *ngIf="paymentFormForm.controls.MaximumInstallments.touched && paymentFormForm.controls.MaximumInstallments.invalid">
-                      <span *ngIf="paymentFormForm.controls.MaximumInstallments.errors?.required">O Máximo de Parcelas é
-                        obrigatório.</span>
+                    <input type="number" 
+                           matInput 
+                           #MaximumInstallmentsInput 
+                           formControlName="MaximumInstallments"
+                           maxlength="10" 
+                           id="maximumInstallments" 
+                           [(ngModel)]="MaximumInstallments" 
+                           required>
+                    <mat-error *ngIf="paymentFormForm.controls.MaximumInstallments.touched && paymentFormForm.controls.MaximumInstallments.invalid">
+                      <span *ngIf="paymentFormForm.controls.MaximumInstallments.errors?.required">O Máximo de Parcelas é obrigatório.</span>
                     </mat-error>
                   </mat-form-field>
                 </div>
 
                 <div class="div-row-input registration-button-row d-flex">
-                  <button mat-raised-button class="create-button" (click)="createUpdatePaymentForm()" type="button"
-                    [disabled]="createButtonLoading">
+                  <button mat-raised-button 
+                          class="create-button" 
+                          (click)="createUpdatePaymentForm()" 
+                          type="button"
+                          [disabled]="createButtonLoading">
                     <div class="spinner">
                       <mat-spinner *ngIf="createButtonLoading" [diameter]="15"></mat-spinner>
                       <span *ngIf="!createButtonLoading" class="fa-solid fa-floppy-disk me-1 w-20px"></span>
@@ -130,20 +155,21 @@
                     </div>
                   </button>
 
-                  <button mat-raised-button color="warn" (click)="deletePaymentForm()" type="button"
-                    [disabled]="!IdPaymentForm">
+                  <button mat-raised-button 
+                          color="warn" 
+                          (click)="deletePaymentForm()" 
+                          type="button"
+                          [disabled]="!IdPaymentForm">
                     <span class="fa-solid fa-trash me-1 w-20px"></span>
                     <span>Excluir</span>
                   </button>
-                </div>
 
+                </div>
               </div>
             </div>
           </form>
         </mat-tab>
-
       </mat-tab-group>
-
     </app-container>
   </div>
 </div>
