--- a/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
@@ -3,7 +3,6 @@
   <div id="content-wrapper" class="d-flex flex-column">
     <app-toolbar></app-toolbar>
     <app-container containerTitle="Gerenciar Usuários" containerPath="Gerencial" [information]="informationField"> 
-
       <mat-tab-group #tabGroup animationDuration="0ms">
 
         <!-- SEARCH TAB -->
@@ -12,28 +11,44 @@
             <div class="col-sm-11 p-0 d-flex">
               <mat-form-field class="search-form-field col-sm-9" appearance="outline">
                 <mat-label>Digite o e-mail do usuário ou o nome da pessoa</mat-label>
-                <input matInput type="text" [(ngModel)]="searchEmailUser" id="searchEmailUser">
+                <input matInput 
+                       type="text" 
+                       [(ngModel)]="searchEmailUser" 
+                       id="searchEmailUser">
                 <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
                   <mat-icon>close</mat-icon>
                 </button>
               </mat-form-field>
-              <button (click)="loadUserData()" id="mat-search-button" mat-raised-button color="primary"
-                class="mat-button-entry me-2" [disabled]="searchButtonLoading">
+
+              <button (click)="loadUserData()" 
+                      id="mat-search-button" 
+                      mat-raised-button 
+                      color="primary"
+                      class="mat-button-entry me-2" 
+                      [disabled]="searchButtonLoading">
                 <div class="spinner">
                   <mat-spinner *ngIf="searchButtonLoading" [diameter]="15"></mat-spinner>
                   <span *ngIf="!searchButtonLoading" class="fa-solid fa-magnifying-glass me-1 w-20px"></span>
                   Pesquisar
                 </div>
               </button>
-              <button id="mat-add-button" mat-raised-button class="mat-button-entry create-button"
-                matTooltip="Novo Recurso" matTooltipPosition="above" (click)="tabGroup.selectedIndex=1"
-                (click)="addNewUser()"><span class="fa-solid fa-plus w-20px"></span></button>
+
+              <button id="mat-add-button" 
+                      mat-raised-button 
+                      class="mat-button-entry create-button"
+                      matTooltip="Novo Recurso" 
+                      matTooltipPosition="above" 
+                      (click)="tabGroup.selectedIndex=1"
+                      (click)="addNewUser()">
+                      <span class="fa-solid fa-plus w-20px"></span>
+              </button>
+          
             </div>
           </div>
+
           <div class="search-table">
             <div class="col-sm-11 search-table-content mat-elevation-z2">
-              <table class="col-sm-12" mat-table [dataSource]="dataSource" matSort matSortActive="Email"
-                matSortDirection="asc">
+              <table class="col-sm-12" mat-table [dataSource]="dataSource" matSort matSortActive="Email" matSortDirection="asc">
 
                 <!-- Email Column -->
                 <ng-container matColumnDef="Email">
@@ -60,8 +75,9 @@
                 <ng-container matColumnDef="Options">
                   <th mat-header-cell *matHeaderCellDef> </th>
                   <td mat-cell *matCellDef="let row">
-                    <button mat-icon-button color="primary" title="Visualizar"><i class="fa-solid fa-pen-to-square"
-                        (click)="tabGroup.selectedIndex=1" (click)="editUser(row.ID)"></i></button>
+                    <button mat-icon-button color="primary" title="Visualizar">
+                      <i class="fa-solid fa-pen-to-square" (click)="tabGroup.selectedIndex=1" (click)="editUser(row.ID)"></i>
+                    </button>
                   </td>
                 </ng-container>
 
@@ -72,8 +88,8 @@
                 <tr class="mat-row" *matNoDataRow>
                   <td class="mat-cell" colspan="4">Nenhum registro encontrado.</td>
                 </tr>
-              </table>
 
+              </table>
               <mat-paginator #paginatorUser="matPaginator" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
             </div>
           </div>
@@ -92,9 +108,20 @@
                 <div class="div-row-input">
                   <mat-form-field appearance="fill" class="col-sm-11">
                     <mat-label>Usuário</mat-label>
-                    <input type="text" (click)="searchPersonByAutoComplete()" [readonly]="isInputReadOnly" id="PersonId" placeholder="Selecione a Pessoa" aria-label="Number" matInput #PersonIdinput formControlName="PersonId" [matAutocomplete]="auto" [(ngModel)]="PersonId" required>
+                    <input type="text" 
+                           (click)="searchPersonByAutoComplete()" 
+                           [readonly]="isInputReadOnly" 
+                           id="PersonId" 
+                           placeholder="Selecione a Pessoa" 
+                           aria-label="Number" 
+                           matInput 
+                           #PersonIdinput 
+                           formControlName="PersonId" 
+                           [matAutocomplete]="auto" 
+                           [(ngModel)]="PersonId" 
+                           required>
                       <mat-error *ngIf="userForm.controls.PersonId.touched && userForm.controls.PersonId.invalid">
-                          <span *ngIf="userForm.controls.PersonId.errors?.required">O Usuário é obrigatório.</span>
+                        <span *ngIf="userForm.controls.PersonId.errors?.required">O Usuário é obrigatório.</span>
                       </mat-error>
                       <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayState">
                       <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
@@ -108,11 +135,18 @@
                 <div class="div-row-input">
                   <mat-form-field appearance="fill" class="col-sm-11">
                     <mat-label>E-mail</mat-label>
-                    <input matInput #Emailinput formControlName="Email" [maxlength]="255" placeholder="email@exemplo.com.br" id="Email" [(ngModel)]="Email" required>
+                    <input matInput 
+                           #Emailinput 
+                           formControlName="Email" 
+                           [maxlength]="255" 
+                           placeholder="email@exemplo.com.br" 
+                           id="Email" 
+                           [(ngModel)]="Email" 
+                           required>
                     <mat-hint align="end">{{Emailinput.value?.length || 0}}/255</mat-hint>
                     <mat-error *ngIf="userForm.controls.Email.touched && userForm.controls.Email.invalid">
-                        <span *ngIf="userForm.controls.Email.errors?.required || userForm.controls.Email.errors?.email">Informe um e-mail válido.</span>
-                      </mat-error>
+                      <span *ngIf="userForm.controls.Email.errors?.required || userForm.controls.Email.errors?.email">Informe um e-mail válido.</span>
+                    </mat-error>
                   </mat-form-field>
                 </div>
 
@@ -129,7 +163,7 @@
                       <mat-option value="G" selected>Gerente</mat-option>
                     </mat-select>
                     <mat-error *ngIf="userForm.controls.FunctionUser.touched && userForm.controls.FunctionUser.invalid">
-                        <span *ngIf="userForm.controls.FunctionUser.errors?.required">A Função é obrigatória.</span>
+                      <span *ngIf="userForm.controls.FunctionUser.errors?.required">A Função é obrigatória.</span>
                     </mat-error>
                   </mat-form-field>
                 </div>
@@ -137,7 +171,12 @@
                 <div class="div-row-input">
                   <mat-form-field appearance="fill" class="col-sm-6">
                     <mat-label>Situação</mat-label>
-                    <mat-select [disabled]="isInputDisabled" formControlName="Situation" #SituationInput id="Situation" [(ngModel)]="Situation" required>
+                    <mat-select [disabled]="isInputDisabled" 
+                                formControlName="Situation" 
+                                #SituationInput 
+                                id="Situation" 
+                                [(ngModel)]="Situation" 
+                                required>
                       <mat-option value="A" selected>Ativo</mat-option>
                       <mat-option value="I">Inativo</mat-option>
                     </mat-select>
@@ -150,7 +189,16 @@
                 <div class="div-row-input">
                   <mat-form-field appearance="fill" class="col-sm-6">
                     <mat-label>Senha</mat-label>
-                    <input [type]="hide ? 'password' : 'text'" [readonly]="isInputReadOnly" matInput #PasswordInput formControlName="Password" [maxlength]="255" placeholder="Informe uma senha" id="Password" [(ngModel)]="Password" required>
+                    <input [type]="hide ? 'password' : 'text'" 
+                           [readonly]="isInputReadOnly" 
+                           matInput 
+                           #PasswordInput 
+                           formControlName="Password" 
+                           [maxlength]="255" 
+                           placeholder="Informe uma senha" 
+                           id="Password" 
+                           [(ngModel)]="Password" 
+                           required>
                     <mat-icon [hidden]="isEyeIconHidden" style="color:#5A5C69;" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     <mat-hint align="end">{{PasswordInput.value?.length || 0}}/255</mat-hint>
                     <mat-error *ngIf="userForm.controls.Password.touched && userForm.controls.Password.invalid">
@@ -161,19 +209,31 @@
 
                   <mat-form-field appearance="fill" class="col-sm-5 ml-0">
                     <mat-label>Confirmação de Senha</mat-label>
-                    <input [type]="hideConfirm ? 'password' : 'text'" [readonly]="isInputReadOnly" matInput #ConfirmPasswordInput formControlName="ConfirmPassword" [maxlength]="255" placeholder="Confirme sua senha" id="ConfirmPassword" [(ngModel)]="ConfirmPassword" required>
+                    <input [type]="hideConfirm ? 'password' : 'text'" 
+                           [readonly]="isInputReadOnly" 
+                           matInput 
+                           #ConfirmPasswordInput 
+                           formControlName="ConfirmPassword" 
+                           [maxlength]="255" 
+                           placeholder="Confirme sua senha" 
+                           id="ConfirmPassword" 
+                           [(ngModel)]="ConfirmPassword" 
+                           required>
                     <mat-icon [hidden]="isEyeIconHidden" style="color:#5A5C69;" matSuffix (click)="hideConfirm = !hideConfirm">{{hideConfirm ? 'visibility_off' : 'visibility'}}</mat-icon>
                     <mat-hint align="end">{{ConfirmPasswordInput.value?.length || 0}}/255</mat-hint>
-                      <mat-error *ngIf="userForm.controls.ConfirmPassword.touched && userForm.controls.ConfirmPassword.invalid">
-                          <span *ngIf="userForm.controls.ConfirmPassword.errors?.required">É necessário confirmar a senha.</span>
-                          <span *ngIf="userForm.controls.ConfirmPassword.errors?.maxlength">A Senha deve ter no máximo 255 caracteres.</span>
-                      </mat-error>
+                    <mat-error *ngIf="userForm.controls.ConfirmPassword.touched && userForm.controls.ConfirmPassword.invalid">
+                        <span *ngIf="userForm.controls.ConfirmPassword.errors?.required">É necessário confirmar a senha.</span>
+                        <span *ngIf="userForm.controls.ConfirmPassword.errors?.maxlength">A Senha deve ter no máximo 255 caracteres.</span>
+                    </mat-error>
                   </mat-form-field>
                 </div>
 
                 <div class="div-row-input registration-button-row d-flex">
-                  <button mat-raised-button class="create-button" (click)="createUpdateUser()" type="button"
-                    [disabled]="createButtonLoading">
+                  <button mat-raised-button 
+                          class="create-button" 
+                          (click)="createUpdateUser()" 
+                          type="button"
+                          [disabled]="createButtonLoading">
                     <div class="spinner">
                       <mat-spinner *ngIf="createButtonLoading" [diameter]="15"></mat-spinner>
                       <span *ngIf="!createButtonLoading" class="fa-solid fa-floppy-disk me-1 w-20px"></span>
@@ -181,8 +241,13 @@
                     </div>
                   </button>
 
-                  <button mat-raised-button class="create-button" (click)="activateUserSituation()" type="button"
-                    id="btn-activate-user" [disabled]="activateUserButtonLoading" [hidden]="isActivateButtonHidden">
+                  <button mat-raised-button 
+                          class="create-button" 
+                          (click)="activateUserSituation()" 
+                          type="button"
+                          id="btn-activate-user" 
+                          [disabled]="activateUserButtonLoading" 
+                          [hidden]="isActivateButtonHidden">
                     <div class="spinner">
                       <mat-spinner *ngIf="activateUserButtonLoading" [diameter]="15"></mat-spinner>
                       <span *ngIf="!activateUserButtonLoading" class="fa-solid fa-user-check me-1 w-20px"></span>
@@ -190,8 +255,13 @@
                     </div>
                   </button>
 
-                  <button mat-raised-button color="warn" (click)="deactivateUserSituation()" type="button"
-                    id="btn-disable-user" [disabled]="deactivateUserButtonLoading" [hidden]="isDeactivateButtonHidden">
+                  <button mat-raised-button 
+                          color="warn" 
+                          (click)="deactivateUserSituation()" 
+                          type="button"
+                          id="btn-disable-user" 
+                          [disabled]="deactivateUserButtonLoading" 
+                          [hidden]="isDeactivateButtonHidden">
                     <div class="spinner">
                       <mat-spinner *ngIf="deactivateUserButtonLoading" [diameter]="15"></mat-spinner>
                       <span *ngIf="!deactivateUserButtonLoading" class="fa-solid fa-user-slash me-1 w-20px"></span>
@@ -199,9 +269,14 @@
                     </div>
                   </button>
 
-                  <button mat-raised-button color="primary" id="btn-reset-password-user"
-                    (click)="openResetPasswordDialog()" hidden><span
-                      class="fa-solid fa-retweet me-1 w-20px"></span><span>Redefinir Senha</span></button>
+                  <button mat-raised-button 
+                          color="primary" 
+                          id="btn-reset-password-user"
+                          (click)="openResetPasswordDialog()" 
+                          hidden>
+                          <span class="fa-solid fa-retweet me-1 w-20px"></span>
+                          <span>Redefinir Senha</span>
+                  </button>
                 </div>
               </div>
             </div>
@@ -229,7 +304,14 @@
                 <ng-container matColumnDef="Options">
                   <th mat-header-cell *matHeaderCellDef> </th>
                   <td mat-cell *matCellDef="let row">
-                    <button mat-icon-button color="warn" title="Remover" [disabled]="isButtonDeleteResourceDisabled" (click)="findUserResourceToDelete(row.ID)" style="float:right;"><i class="fa-solid fa-trash"></i></button>
+                    <button mat-icon-button 
+                            color="warn" 
+                            title="Remover" 
+                            [disabled]="isButtonDeleteResourceDisabled" 
+                            (click)="findUserResourceToDelete(row.ID)" 
+                            style="float:right;">
+                            <i class="fa-solid fa-trash"></i>
+                    </button>
                   </td>
                 </ng-container>
 
@@ -240,14 +322,21 @@
                 <tr class="mat-row" *matNoDataRow>
                   <td class="mat-cell" colspan="2">Nenhum registro encontrado.</td>
                 </tr>
+
               </table>
               <mat-paginator #paginatorResource="matPaginator" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
             </div>
           </div>
 
-          <button mat-fab id="add-phone-btn" class="float-btn create-button" (click)="openAddScreensDialog()"
-            aria-label="Add button" matTooltip="Inserir Recursos" matTooltipPosition="above" [hidden]="isButtonAddResourceHidden">
-            <mat-icon>add</mat-icon>
+          <button mat-fab 
+                  id="add-phone-btn" 
+                  class="float-btn create-button" 
+                  (click)="openAddScreensDialog()"
+                  aria-label="Add button" 
+                  matTooltip="Inserir Recursos" 
+                  matTooltipPosition="above" 
+                  [hidden]="isButtonAddResourceHidden">
+                  <mat-icon>add</mat-icon>
           </button>
         </mat-tab>
       </mat-tab-group>
