--- a/VaccineC/src/app/pages/movimentar-estoque/confirm-cancel-movement-dialog.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/confirm-cancel-movement-dialog.html
@@ -2,11 +2,16 @@
 <mat-dialog-content class="mat-typography">
     <p>Tem certeza que deseja cancelar esse movimento?</p>
 </mat-dialog-content>
+
 <mat-dialog-actions align="end">
     <button mat-flat-button
-            mat-dialog-close color="primary">Voltar</button>
+            mat-dialog-close color="primary" 
+            cdkFocusInitial>
+            Voltar
+    </button>
     <button mat-flat-button
             color="warn"
-            [mat-dialog-close]="true"
-            cdkFocusInitial >Cancelar</button>
+            [mat-dialog-close]="true">
+            Cancelar
+    </button>
 </mat-dialog-actions>
