--- a/VaccineC/src/app/pages/orcamentos/add-budget-product-dialog.html
+++ b/VaccineC/src/app/pages/orcamentos/add-budget-product-dialog.html
@@ -1,19 +1,21 @@
 <h2 mat-dialog-title>Produto</h2>
 <mat-dialog-content class="mat-typography">
     <form [formGroup]="budgetProductForm">
-
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-12">
                 <mat-label>Tomador</mat-label>
-                <input (click)="searchPersonByAutoComplete()" type="text"
-                    #PersonNameinput placeholder="Selecione o Tomador"
-                    aria-label="Number" matInput formControlName="PersonName"
-                    [matAutocomplete]="autoPerson" [(ngModel)]="PersonName">
-                <mat-autocomplete #autoPerson="matAutocomplete"
-                    [displayWith]="displayStatePerson">
-                    <mat-option *ngFor="let acPerson of acPersons | async"
-                        [value]="acPerson">
-                         {{acPerson.Name}}
+                <input (click)="searchPersonByAutoComplete()" 
+                        type="text"
+                        #PersonNameinput 
+                        placeholder="Selecione o Tomador"
+                        aria-label="Number" 
+                        matInput 
+                        formControlName="PersonName"
+                        [matAutocomplete]="autoPerson" 
+                        [(ngModel)]="PersonName">  
+                <mat-autocomplete #autoPerson="matAutocomplete" [displayWith]="displayStatePerson">
+                    <mat-option *ngFor="let acPerson of acPersons | async" [value]="acPerson">
+                        {{acPerson.Name}}
                     </mat-option>
                 </mat-autocomplete>
                 <mat-icon matSuffix>search</mat-icon>
@@ -23,67 +25,77 @@
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-12">
                 <mat-label>Produto</mat-label>
-                <input (click)="searchProductByAutoComplete()" type="text"
-                    #ProcutNameinput placeholder="Selecione o Produto"
-                    aria-label="Number" matInput formControlName="ProductName"
-                    [matAutocomplete]="auto" [(ngModel)]="ProductName" required>
-                <mat-autocomplete #auto="matAutocomplete"
-                    [displayWith]="displayState" (optionSelected)="onSelectionChanged($event)">
-                    <mat-option *ngFor="let option of filteredOptions | async"
-                        [value]="option">
+                <input (click)="searchProductByAutoComplete()" 
+                        type="text"
+                        #ProcutNameinput 
+                        placeholder="Selecione o Produto"
+                        aria-label="Number" 
+                        matInput 
+                        formControlName="ProductName"
+                        [matAutocomplete]="auto" 
+                        [(ngModel)]="ProductName" 
+                        required>
+                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayState" (optionSelected)="onSelectionChanged($event)">
+                    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
                         {{option.Name}}
                     </mat-option>
                 </mat-autocomplete>
                 <mat-icon matSuffix>search</mat-icon>
-             <mat-error
-            *ngIf="budgetProductForm.controls.ProductName.touched && budgetProductForm.controls.ProductName.invalid">
-            <span *ngIf="budgetProductForm.controls.ProductName.errors?.required">O Produto é obrigatório.</span>
-        </mat-error>
+                <mat-error *ngIf="budgetProductForm.controls.ProductName.touched && budgetProductForm.controls.ProductName.invalid">
+                    <span *ngIf="budgetProductForm.controls.ProductName.errors?.required">O Produto é obrigatório.</span>
+                </mat-error>
             </mat-form-field>
         </div>
 
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-6" floatLabel="always">
                 <mat-label>R$ Venda</mat-label>
-                <input matInput formControlName="EstimatedSalesValue" [(ngModel)]="EstimatedSalesValue"
-                    placeholder="0,00" required placeholder="0,00" mask="separator.2" [thousandSeparator]="'.'"
-                    [decimalMarker]="','">
+                <input matInput 
+                       formControlName="EstimatedSalesValue" 
+                       [(ngModel)]="EstimatedSalesValue"
+                       placeholder="0,00" 
+                       required 
+                       placeholder="0,00" 
+                       mask="separator.2" 
+                       [thousandSeparator]="'.'"
+                       [decimalMarker]="','">
                 <span matPrefix>R$&nbsp;</span>
-                <mat-error
-                *ngIf="budgetProductForm.controls.EstimatedSalesValue.touched && budgetProductForm.controls.EstimatedSalesValue.invalid">
-                <span *ngIf="budgetProductForm.controls.EstimatedSalesValue.errors?.required">O R$ Venda é obrigatório.</span>
-            </mat-error>
+                <mat-error *ngIf="budgetProductForm.controls.EstimatedSalesValue.touched && budgetProductForm.controls.EstimatedSalesValue.invalid">
+                    <span *ngIf="budgetProductForm.controls.EstimatedSalesValue.errors?.required">O R$ Venda é obrigatório.</span>
+                </mat-error>
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="col-sm-6">
                 <mat-label>Situação</mat-label>
-                <mat-select formControlName="Situation" #SituationInput [(ngModel)]="Situation"
-                    [disabled]="true">
+                <mat-select formControlName="Situation" #SituationInput [(ngModel)]="Situation" [disabled]="true">
                     <mat-option value="E">EXECUTADO</mat-option>
                     <mat-option value="P">PENDENTE</mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
+
         <div id="doses" class="mb-2 mt-2" *ngIf="!isTableDosesHidden">
+            
             <mat-divider></mat-divider>
+           
             <div id="search-table" style="margin-top:2rem;margin-bottom:2rem;">
                 <div class="col-sm-12 search-table-content mat-elevation-z2">
-                    <table mat-table class="col-sm-12" mat-table [dataSource]="dataSource" matSort
-                        matSortActive="DoseType" matSortDirection="asc">
+                    <table mat-table class="col-sm-12" mat-table [dataSource]="dataSource" matSort matSortActive="DoseType" matSortDirection="asc">
 
                         <!-- Checkbox Column -->
                         <ng-container matColumnDef="select">
                             <th mat-header-cell *matHeaderCellDef style="width: 5rem;">
                                 <mat-checkbox (change)="$event ? toggleAllRows() : null"
-                                    [checked]="selection.hasValue() && isAllSelected()"
-                                    [indeterminate]="selection.hasValue() && !isAllSelected()"
-                                    [aria-label]="checkboxLabel()">
+                                              [checked]="selection.hasValue() && isAllSelected()"
+                                              [indeterminate]="selection.hasValue() && !isAllSelected()"
+                                              [aria-label]="checkboxLabel()">
                                 </mat-checkbox>
                             </th>
                             <td mat-cell *matCellDef="let row" style="width: 5rem;">
                                 <mat-checkbox (click)="$event.stopPropagation()"
-                                    (change)="$event ? selection.toggle(row) : null"
-                                    [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
+                                              (change)="$event ? selection.toggle(row) : null"
+                                              [checked]="selection.isSelected(row)" 
+                                              [aria-label]="checkboxLabel(row)">
                                 </mat-checkbox>
                             </td>
                         </ng-container>
@@ -95,29 +107,36 @@
                         </ng-container>
 
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
-                        </tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></tr>
 
                         <!-- Row shown when there is no matching data. -->
                         <tr class="mat-row" *matNoDataRow>
                             <td class="mat-cell" colspan="6">Nenhum registro encontrado.</td>
                         </tr>
                     </table>
-
                 </div>
             </div>
+
             <mat-divider></mat-divider>
+
         </div>
+
         <div class="div-row-input mt-4">
             <mat-form-field class="example-full-width" appearance="fill" class="col-sm-12">
                 <mat-label>Detalhes</mat-label>
-                <textarea matInput #DetailsInput formControlName="Details" [(ngModel)]="Details"
-                    placeholder="Informações complementares" maxlength="255"></textarea>
+                <textarea matInput 
+                          #DetailsInput 
+                          formControlName="Details" 
+                          [(ngModel)]="Details"
+                          placeholder="Informações complementares" 
+                          maxlength="255">
+                </textarea>
             </mat-form-field>
         </div>
     </form>
 </mat-dialog-content>
+
 <mat-dialog-actions align="end">
-    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
-    <button mat-flat-button (click)="createBudgetProduct()" cdkFocusInitial class="create-button">Salvar</button>
+    <button mat-flat-button mat-dialog-close color="primary" cdkFocusInitial>Cancelar</button>
+    <button mat-flat-button (click)="createBudgetProduct()" class="create-button">Salvar</button>
 </mat-dialog-actions>
