--- a/VaccineC/src/app/pages/orcamentos/confirm-budget-cancelation-dialog.html
+++ b/VaccineC/src/app/pages/orcamentos/confirm-budget-cancelation-dialog.html
@@ -3,6 +3,6 @@
     <p>Tem certeza que deseja cancelar esse Orçamento?</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-flat-button mat-dialog-close color="primary">Fechar</button>
-    <button mat-flat-button color="warn" [mat-dialog-close]="true" cdkFocusInitial>Cancelar</button>
+    <button mat-flat-button mat-dialog-close color="primary" cdkFocusInitial>Fechar</button>
+    <button mat-flat-button color="warn" [mat-dialog-close]="true">Cancelar</button>
 </mat-dialog-actions>
