--- a/VaccineC/src/app/pages/orcamentos/confirm-budget-product-remove-dialog.html
+++ b/VaccineC/src/app/pages/orcamentos/confirm-budget-product-remove-dialog.html
@@ -3,6 +3,6 @@
     <p>Tem certeza que deseja remover esse Produto?</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
-    <button mat-flat-button color="warn" [mat-dialog-close]="true" cdkFocusInitial>Remover</button>
+    <button mat-flat-button mat-dialog-close color="primary" cdkFocusInitial>Cancelar</button>
+    <button mat-flat-button color="warn" [mat-dialog-close]="true">Remover</button>
 </mat-dialog-actions>
