--- a/VaccineC/src/app/pages/orcamentos/repeat-budget-product-dialog.html
+++ b/VaccineC/src/app/pages/orcamentos/repeat-budget-product-dialog.html
@@ -31,6 +31,6 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
-    <button mat-flat-button cdkFocusInitial (click)="repeatBudgetProduct()" class="create-button">Repetir</button>
+    <button mat-flat-button mat-dialog-close color="primary" cdkFocusInitial>Cancelar</button>
+    <button mat-flat-button (click)="repeatBudgetProduct()" class="create-button">Repetir</button>
 </mat-dialog-actions>
