--- a/VaccineC/src/app/pages/produto/dialog-content-dose.html
+++ b/VaccineC/src/app/pages/produto/dialog-content-dose.html
@@ -2,22 +2,23 @@
 <mat-dialog-content class="mat-typography">
     <form [formGroup]="productDosesForm">
         <div class="div-row-input">
-            <mat-form-field appearance="fill"
-                            class="col-sm-12">
+            <mat-form-field appearance="fill" class="col-sm-12">
                 <mat-label>Tipo de Dose</mat-label>
-                <mat-select #DoseTypeInput
-                            formControlName="DoseType"
-                            [(ngModel)]="doseType"
-                            id="doseType"
-                            required (selectionChange)="onSelectionChanged($event.value)">
+                <mat-select 
+                    #DoseTypeInput
+                    formControlName="DoseType"
+                    [(ngModel)]="doseType"
+                    id="doseType"
+                    required 
+                    (selectionChange)="onSelectionChanged($event.value)">
+
                     <mat-option selected value="D1">DOSE 1</mat-option>
                     <mat-option value="D2">DOSE 2</mat-option>
                     <mat-option value="D3">DOSE 3</mat-option>
                     <mat-option value="DU">DOSE ÚNICA</mat-option>
                     <mat-option value="DR">DOSE DE REFORÇO</mat-option>
                 </mat-select>
-                <mat-error
-                *ngIf="productDosesForm.controls.DoseType.touched && productDosesForm.controls.DoseType.invalid">
+                <mat-error *ngIf="productDosesForm.controls.DoseType.touched && productDosesForm.controls.DoseType.invalid">
                 <span *ngIf="productDosesForm.controls.DoseType.errors?.required">O Tipo de Dose é obrigatório.</span>
             </mat-error>
             </mat-form-field>
@@ -26,15 +27,16 @@
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-12">
                 <mat-label>Intervalo</mat-label>
-                <input type="number"
-                       formControlName="DoseRangeMonth"
-                       [(ngModel)]="doseRangeMonth"
-                       matInput
-                       #input
-                       maxlength="15"
-                       placeholder="Quantidade de meses de espera para aplicação"
-                       id="doseRangeMonth"
-                       [readonly]="isDoseRangeMonthDisabled">
+                <input 
+                    type="number"
+                    formControlName="DoseRangeMonth"
+                    [(ngModel)]="doseRangeMonth"
+                    matInput
+                    #input
+                    maxlength="15"
+                    placeholder="Quantidade de meses de espera para aplicação"
+                    id="doseRangeMonth"
+                    [readonly]="isDoseRangeMonthDisabled">
                 <span matSuffix>mês</span>
             </mat-form-field>
         </div>
