--- a/VaccineC/src/app/pages/situacao-estoque/batch-information-dialog.html
+++ b/VaccineC/src/app/pages/situacao-estoque/batch-information-dialog.html
@@ -29,16 +29,14 @@
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-6">
                 <mat-label>Data de Fabricação</mat-label>
-                <input matInput [matDatepicker]="picker" readonly
-                [(ngModel)]="ManufacturingDate">
+                <input matInput [matDatepicker]="picker" readonly [(ngModel)]="ManufacturingDate">
                 <mat-datepicker-toggle matSuffix [for]="picker" disabled></mat-datepicker-toggle>
                 <mat-datepicker #picker disabled></mat-datepicker>
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="col-sm-6">
                 <mat-label>Data de Validade</mat-label>
-                <input matInput [matDatepicker]="picker2" readonly
-                [(ngModel)]="ValidityBatchDate">
+                <input matInput [matDatepicker]="picker2" readonly [(ngModel)]="ValidityBatchDate">
                 <mat-datepicker-toggle matSuffix [for]="picker2" disabled></mat-datepicker-toggle>
                 <mat-datepicker #picker2 disabled></mat-datepicker>
             </mat-form-field>
